fixed css to get rid of empty whitespace on mobile landscape view

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,7 +8,8 @@ body {
   margin: 0;
 }
 
-html {
+html,
+body {
   overflow-x: hidden;
 }
 
